# rust-bank-csv-analysis

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  summary.yaml
docs/: architecture.md
docs/adr/: 0001-sign-reversal-as-warning-not-error.md
src/: calc_summary.rs  check_summay.rs  lib.rs  main.rs  xlsx.rs
src/calc_summary/: config.rs  detection.rs  mod.rs  summary.rs  types.rs
