[package]
name = "rust_bank_csv_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rust_xlsxwriter = "0.68"
serde = { version = "1.0", features = ["derive"] }
